Atualizações de erros
Fiz algumas atualizações para melhorar algumas coisas

--- a/Contatos.html
+++ b/Contatos.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header class="cabecalho">
+    
         <div class="container">
            
             <input type="checkbox" id="menu" class="container__botao">
@@ -60,15 +61,20 @@
             </ul>
         </ul>
     </header>
+    <main class="corpo">
     <section class="contato">
         <div class="contato__descricao">
             <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
             <p class="contato__texto">Atualizações de estoque, novos perfumes, promoções e outros.</p>
         </div>
         <input type="email" class="contato__email" placeholder="Cadastre seu e-email">
+        <button class="button" id="botao" >Enviar</button>
 
     </section>
-    <footer class="rodape"> Desenvolvido por Francisco Moreira</footer>
+</main>
+    <footer class="rodape">
+        <p class="rodape__texto"> Desenvolvido por Francisco Moreira </p>
+    </footer>
 </body>
-
+ <script src="main.js"></script>
 </html>
