--- a/Depoimentos.html
+++ b/Depoimentos.html
@@ -70,7 +70,10 @@
             <p class="sobre__descricao">Precisava de um novo shampoo e encontrei na Loja Cosméticos JM. Meu cabelo está mais macio e brilhante desde que comecei a usá-lo. Excelente qualidade!</p>
             
         </div> 
+        <footer class="rodape">
+            <p class="rodape__texto"> Desenvolvido por Francisco Moreira </p>
+        </footer>
        
 </body>
-<footer class="rodape"> Desenvolvido por Francisco Moreira</footer>
+
 </html>
