--- a/Sobre.html
+++ b/Sobre.html
@@ -62,13 +62,16 @@
     </header>
             <div class="sobre">
                 <h1 class="sobre__titulo"> Sobre a Cosméticos JM</h1>
-                <p class="sobre__descricao">A Diva é uma rede de lojas de cosméticos e salões de beleza que iniciou sua história em 2001. Estamos localizados no centro de Curitiba, Paraná, onde trabalhamos com uma diversidade de mais de 100 marcas nacionais e internacionais de produtos e com os melhores preços do mercado.</p>
+                <p class="sobre__descricao">A Cosméticos JM é uma rede de lojas de cosméticos e salões de beleza que iniciou sua história em 2001. Estamos localizados no centro de Curitiba, Paraná, onde trabalhamos com uma diversidade de mais de 100 marcas nacionais e internacionais de produtos e com os melhores preços do mercado.</p>
                 <p class="sobre__descricao">Para atender as necessidades das consumidoras em relação aos produtos de beleza, trazemos marcas de qualidade e oferecemos um modelo de negócio em que as lojas e os salões estão sempre localizados no mesmo lugar. Nós temos como intuito de nossa rede atender a todas as pessoas com confiança, preços dignos e o mais importante atendê-las personalizadamente e respondendo a questões particulares em todas nossas redes socias e por WhatsApp.</p>
                 <H2 class="sobre__titulo">Missão</H2>
                 <p class="sobre__descricao">A nossa missão é transformar a beleza das pessoas. Levando aos nossos clientes as melhores marcas e serviços, com um atendimento de qualidade e personalizado.</p>
                 <H2 class="sobre__titulo">Visão</H2>
                 <p class="sobre__descricao">Ser uma empresa reconhecida pela qualidade dos produtos e serviços oferecidos.</p>
             </div>
+            <footer class="rodape">
+                <p class="rodape__texto"> Desenvolvido por Francisco Moreira </p>
+            </footer>
 </body>
-<footer class="rodape"> Desenvolvido por Francisco Moreira</footer>
+
 </html>
