Mudança no FOOTER

--- a/Sobre.html
+++ b/Sobre.html
@@ -32,9 +32,6 @@
                 <li class="lista-menu__item">
                     <a href="/Depoimentos.html" class="lista-menu__link">Depoimentos</a>
                 </li>
-                <li class="lista-menu__item">
-                    <a href="/Contatos.html" class="lista-menu__link">Contato</a>
-                </li>
             </ul>
             <img class="container__bolsa" src="/assets/cosmetics.svg" alt="Logo da Bolsa de cosmetico">
         </div>
@@ -54,9 +51,6 @@
                 <li class="lista-menu__item">
                     <a href="/Depoimentos.html" class="lista-menu__link">Depoimentos</a>
                 </li>
-                <li class="lista-menu__item">
-                    <a href="/Contatos.html" class="lista-menu__link">Contato</a>
-                </li>
             </ul>
         </ul>
     </header>
@@ -69,8 +63,17 @@
                 <H2 class="sobre__titulo">Visão</H2>
                 <p class="sobre__descricao">Ser uma empresa reconhecida pela qualidade dos produtos e serviços oferecidos.</p>
             </div>
-            <footer class="rodape">
+            <footer class="contato">
+                <div class="contato__descricao">
+                    <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+                    <p class="contato__texto">Atualizações de estoque, novos perfumes, promoções e outros.</p>
+                    <input type="email" class="contato__email" placeholder="Cadastre seu e-email">
+                <button class="button" id="botao" >Enviar</button>
+                </div>
+                
+                <div class="rodape">
                 <p class="rodape__texto"> Desenvolvido por Francisco Moreira </p>
+                </div>
             </footer>
 </body>
 
