Mudando alguns pontos de responsividade

--- a/Sobre.html
+++ b/Sobre.html
@@ -75,8 +75,11 @@
                     preços dignos e o mais importante atendê-las personalizadamente e respondendo a questões particulares em
                     todas
                     nossas redes socias e por WhatsApp.</p>
-                    
+                    <div class="imagem1">
+                        <img class="imagem__conteudo" src="assets/cosmetico.jpg" alt="Foto da faixada da loja Cosmenticos JM">
+                    </div>
             </div>
+            
             <div class="paragrafo1">
                 <H2 class="conteudo__titulo">Missão</H2>
                 <p class="conteudo__descricao">A nossa missão é transformar a beleza das pessoas. Levando aos nossos
