Mexendo na responsividades

--- a/Sobre.html
+++ b/Sobre.html
@@ -57,7 +57,7 @@
     <section class="conteudo">
     
         <div class="conteudo__contaner">
-            <h1 class="conteudo__titulo">Cosméticos JM</h1>
+            <h1 class="conteudo__titulo1">Cosméticos JM</h1>
             <div class="paragrafo">
                 <div class="imagem">
                     <img class="imagem__conteudo" src="assets/cosmetico.jpg" alt="Foto da faixada da loja Cosmenticos JM">
