Adicinado pagina CADASTRO, foi feito todo HTML e Css dela, foi oraganizado a responsividade. e trabalho com JS tambem

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <li class="lista-menu__item">
                     <a href="/Depoimentos.html" class="lista-menu__link">Depoimentos</a>
                 </li>
+                <li class="lista-menu__item">
+                    <a href="cadastro.html" class="lista-menu__link">Cadastro</a>
+                </li>
             </ul>
             <img class="container__bolsa" src="/assets/cosmetics.svg" alt="Logo da Bolsa de cosmetico">
         </div>
@@ -53,6 +56,9 @@
                 <li class="lista-menu__item">
                     <a href="/Depoimentos.html" class="lista-menu__link">Depoimentos</a>
                 </li>
+                <li class="lista-menu__item">
+                    <a href="cadastro.html" class="lista-menu__link">Cadastro</a>
+                </li>
             </ul>
         </ul>
     
@@ -67,7 +73,7 @@
        
    <section class="botao__imagem">
     <div class="botao">
-        <a class="botao__texto">Compre agora</a>
+        <a href="cadastro.html" class="botao__texto">Compre agora</a>
         <img class="bolha" src="assets/Fxbutton.svg" alt="">
     </div>
 </section>
