--- a/Depoimentos.html
+++ b/Depoimentos.html
@@ -33,6 +33,9 @@
                 <li class="lista-menu__item">
                     <a href="/Depoimentos.html" class="lista-menu__link">Depoimentos</a>
                 </li>
+                <li class="lista-menu__item">
+                    <a href="cadastro.html" class="lista-menu__link">Cadastro</a>
+                </li>
             </ul>
             <img class="container__bolsa" src="/assets/cosmetics.svg" alt="Logo da Bolsa de cosmetico">
         </div>
@@ -51,6 +54,9 @@
                 </li>
                 <li class="lista-menu__item">
                     <a href="/Depoimentos.html" class="lista-menu__link">Depoimentos</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="cadastro.html" class="lista-menu__link">Cadastro</a>
                 </li>
             </ul>
         </ul>
