Corrigindo os erros de comunicação do JS

--- a/cadastro2.html
+++ b/cadastro2.html
@@ -70,9 +70,9 @@
 
         </div>
     </section>
-    <section class="botao__imagem">
-        <div class="botao">
-            <a href="index.html" class="botao__texto">Voltar</a>
+    <section class="botao__imagem1">
+        <div class="botao1">
+            <a href="index.html" class="botao__texto1">Voltar</a>
             <img class="bolha" src="assets/Fxbutton.svg" alt="">
         </div>
     </section>
