--- a/cadastro.html
+++ b/cadastro.html
@@ -108,6 +108,6 @@
 
     </section>
 
-    <script src="../js/script.js" type="module"></script>
+    <script src="./js/script.js" type="module"></script>
  </body>
 </html>
