--- a/cadastro.html
+++ b/cadastro.html
@@ -156,6 +156,6 @@
         </section>
     </footer>
 
-    <script src="./js/script.js" type="module"></script>
+    <script src="Js/script.js" type="module"></script>
  </body>
 </html>
