Mudanças no header e no footer, mudanças de cores, adicionado item de busca.

--- a/cadastro2.html
+++ b/cadastro2.html
@@ -77,4 +77,62 @@
         </div>
     </section>
 
+    <footer class="rodape">
+        <div class="container__rodape">
+            <section class="rodape__empresa">
+                <h2 class="rodape__titulo">Cosméticos JM</h2>
+                <ul class="rodape__lista">
+                    <li>
+                        <a href="Sobre.html" class="rodape__link">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="Depoimentos.html" class="rodape__link">Depoimentos</a>
+                    </li>
+                    <li>
+                        <a href="cadastro.html" class="rodape__link">Cadastro</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="rodape__servicos">
+                <h2 class="rodape__titulo">Serviços</h2>
+                <ul class="rodape__lista">
+                    <li>
+                        <a href="#" class="rodape__link">Varejo e atacado</a>
+                    </li>
+                    <li>
+                        <a href="#" class="rodape__link">Encomendas</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="rodape__contato">
+                <h2 class="rodape__titulo">Contato</h2>
+                <ul class="rodape__lista">
+                    <li>
+                        <a href="#" class="rodape__link">41 9 96813216</a>
+                    </li>
+                    <li>
+                        <a href="#" class="rodape__link">meajuda@mcosméticosJM.com.br</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="rodape__redes-sociais">
+                <h2 class="rodape__titulo">Acesse nossas redes</h2>
+                <ul class="rodape__lista redes-sociais__lista">
+                    <li><img src="/assets/Facebook.svg" alt="ícone do facebook"></li>
+                    <li><img src="/assets/Youtube.svg" alt="ícone do youtube"></li>
+                    <li><img src="/assets/Whatsapp.svg" alt="ícone do whatsapp"></li>
+                    <li><img src="/assets/Instagram.svg" alt="ícone do instagram"></li>
+                </ul>
+                <h2 class="rodape__logo"><span class="rodape__logo--negrito">Cosméticos</span>JM</h2>
+            </section>
+        </div>
+        <section class="footer__class"></section>
+        <div class="footer-classic-aside">
+            <div class="container__classic">
+              <p class="rights"><span>&copy;&nbsp; </span><span class="copyright-year"></span><span>&nbsp;</span><span></span><span>.</span><span> Desenvolvido&nbsp;by&nbsp; Francisco Moreira</span></p>
+            </div>
+          </div>
+        </section>
+    </footer>
+
 </body>
