--- a/Depoimentos.html
+++ b/Depoimentos.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
     <title>Depoimentos</title>
 </head>
@@ -65,91 +66,136 @@
         </ul>
     </header>
     <main class="corpo__sobre">
-    <section class="corpo__sobre1">   
-        <div class="sobre">
-            <img class="imagem__pessoa" src="/assets/homem1.jpg" alt="Foto de um homem">
-            <H2 class="sobre__titulo">Carlos</H2>
-            <p class="sobre__descricao">Comprei um perfume na Loja Cosméticos JM e simplesmente adorei! A fragrância é
-                duradoura e sofisticada. Recomendo a todos os meus amigos.</p>
-        </div>
-        <div class="sobre">
-            <img class="imagem__pessoa" src="/assets/mulher1.jpg" alt="Foto de uma mulher">
-            <h1 class="sobre__titulo"> Maria</h1>
-            <p class="sobre__descricao">Estou apaixonada pelos produtos da Loja Cosméticos JM! O creme facial que comprei
-                deixou minha pele mais suave e radiante. Além disso, o atendimento foi incrível, e a entrega foi super
-                rápida.</p>
-        </div>
-        <div class="sobre">
-            <img class="imagem__pessoa" src="/assets/homem2.jpg" alt="Foto de um homem">
-            <H2 class="sobre__titulo">Rafael</H2>
-            <p class="sobre__descricao">Os batons da Loja Cosméticos JM são maravilhosos! As cores são vibrantes, e a
-                textura é perfeita. Sem dúvida, minha loja favorita para produtos de beleza.</p>
-        </div>
-        <div class="sobre">
-            <img class="imagem__pessoa" src="/assets/mulher2.jpg" alt="Foto de uma mulher">
-            <H2 class="sobre__titulo">Joelma</H2>
-            <p class="sobre__descricao">Precisava de um novo shampoo e encontrei na Loja Cosméticos JM. Meu cabelo está mais
-                macio e brilhante desde que comecei a usá-lo. Excelente qualidade!</p>
-        </div>
+        <h2 class="corpo__titulo">Depoimentos</h2>
+        <section class="corpo__sobre1">
+
+            <div class="sobre">
+                <img class="imagem__pessoa" src="/assets/homem1.jpg" alt="Foto de um homem">
+                <H2 class="sobre__titulo">Carlos</H2>
+                <p class="sobre__descricao">Comprei um perfume na Loja Cosméticos JM e simplesmente adorei! A fragrância
+                    é
+                    duradoura e sofisticada. Recomendo a todos os meus amigos.</p>
+            </div>
+            <div class="sobre">
+                <img class="imagem__pessoa" src="/assets/mulher1.jpg" alt="Foto de uma mulher">
+                <h1 class="sobre__titulo"> Maria</h1>
+                <p class="sobre__descricao">Estou apaixonada pelos produtos da Loja Cosméticos JM! O creme facial que
+                    comprei
+                    deixou minha pele mais suave e radiante. Além disso, o atendimento foi incrível, e a entrega foi
+                    super
+                    rápida.</p>
+            </div>
+            <div class="sobre">
+                <img class="imagem__pessoa" src="/assets/homem2.jpg" alt="Foto de um homem">
+                <H2 class="sobre__titulo">Rafael</H2>
+                <p class="sobre__descricao">Os batons da Loja Cosméticos JM são maravilhosos! As cores são vibrantes, e
+                    a
+                    textura é perfeita. Sem dúvida, minha loja favorita para produtos de beleza.</p>
+            </div>
+            <div class="sobre">
+                <img class="imagem__pessoa" src="/assets/mulher2.jpg" alt="Foto de uma mulher">
+                <H2 class="sobre__titulo">Joelma</H2>
+                <p class="sobre__descricao">Precisava de um novo shampoo e encontrei na Loja Cosméticos JM. Meu cabelo
+                    está mais
+                    macio e brilhante desde que comecei a usá-lo. Excelente qualidade!</p>
+            </div>
+        </section>
+    </main>
+    <section class="carrossel">
+
+        <div class="carrossel__container1">
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="assets/imagem1.jpeg" alt="Imagem de pessoas na Loja"></div>
+                    <div class="swiper-slide"><img src="assets/imagem2.jpeg" alt="Imagem de pessoas na Loja"></div>
+                    <div class="swiper-slide"><img src="assets/imagem3.jpeg" alt="Imagem de pessoas na Loja"></div>
+                    <div class="swiper-slide"><img src="assets/imagem4.jpeg" alt="Imagem de pessoas na Loja"></div>
+                    <div class="swiper-slide"><img src="assets/imagem5.jpeg" alt="Imagem de pessoas na Loja"></div>
+                    <div class="swiper-slide"><img src="assets/imagem6.jpeg" alt="Imagem de pessoas na Loja"></div>
+
+                    ...
+                </div>
+            </div>
+
     </section>
-</main>
-<footer class="rodape">
-    <div class="container__rodape">
-        <section class="rodape__empresa">
-            <h2 class="rodape__titulo">Cosméticos JM</h2>
-            <ul class="rodape__lista">
-                <li>
-                    <a href="Sobre.html" class="rodape__link">Sobre</a>
-                </li>
-                <li>
-                    <a href="Depoimentos.html" class="rodape__link">Depoimentos</a>
-                </li>
-                <li>
-                    <a href="cadastro.html" class="rodape__link">Cadastro</a>
-                </li>
-            </ul>
-        </section>
-        <section class="rodape__servicos">
-            <h2 class="rodape__titulo">Serviços</h2>
-            <ul class="rodape__lista">
-                <li>
-                    <a href="#" class="rodape__link">Varejo e atacado</a>
-                </li>
-                <li>
-                    <a href="#" class="rodape__link">Encomendas</a>
-                </li>
-            </ul>
-        </section>
-        <section class="rodape__contato">
-            <h2 class="rodape__titulo">Contato</h2>
-            <ul class="rodape__lista">
-                <li>
-                    <a href="#" class="rodape__link">41 9 96813216</a>
-                </li>
-                <li>
-                    <a href="#" class="rodape__link">meajuda@mcosméticosJM.com.br</a>
-                </li>
-            </ul>
-        </section>
-        <section class="rodape__redes-sociais">
-            <h2 class="rodape__titulo">Acesse nossas redes</h2>
-            <ul class="rodape__lista redes-sociais__lista">
-                <li><img src="/assets/Facebook.svg" alt="ícone do facebook"></li>
-                <li><img src="/assets/Youtube.svg" alt="ícone do youtube"></li>
-                <li><img src="/assets/Whatsapp.svg" alt="ícone do whatsapp"></li>
-                <li><img src="/assets/Instagram.svg" alt="ícone do instagram"></li>
-            </ul>
-            <h2 class="rodape__logo"><span class="rodape__logo--negrito">Cosméticos</span>JM</h2>
-        </section>
-    </div>
-    <section class="footer__class"></section>
-    <div class="footer-classic-aside">
-        <div class="container__classic">
-          <p class="rights"><span>&copy;&nbsp; </span><span class="copyright-year"></span><span>&nbsp;</span><span></span><span>.</span><span> Desenvolvido&nbsp;by&nbsp; Francisco Moreira</span></p>
+
+    <footer class="rodape">
+        <div class="container__rodape">
+            <section class="rodape__empresa">
+                <h2 class="rodape__titulo">Cosméticos JM</h2>
+                <ul class="rodape__lista">
+                    <li>
+                        <a href="Sobre.html" class="rodape__link">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="Depoimentos.html" class="rodape__link">Depoimentos</a>
+                    </li>
+                    <li>
+                        <a href="cadastro.html" class="rodape__link">Cadastro</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="rodape__servicos">
+                <h2 class="rodape__titulo">Serviços</h2>
+                <ul class="rodape__lista">
+                    <li>
+                        <a href="#" class="rodape__link">Varejo e atacado</a>
+                    </li>
+                    <li>
+                        <a href="#" class="rodape__link">Encomendas</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="rodape__contato">
+                <h2 class="rodape__titulo">Contato</h2>
+                <ul class="rodape__lista">
+                    <li>
+                        <a href="#" class="rodape__link">41 9 96813216</a>
+                    </li>
+                    <li>
+                        <a href="#" class="rodape__link">meajuda@mcosméticosJM.com.br</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="rodape__redes-sociais">
+                <h2 class="rodape__titulo">Acesse nossas redes</h2>
+                <ul class="rodape__lista redes-sociais__lista">
+                    <li><img src="/assets/Facebook.svg" alt="ícone do facebook"></li>
+                    <li><img src="/assets/Youtube.svg" alt="ícone do youtube"></li>
+                    <li><img src="/assets/Whatsapp.svg" alt="ícone do whatsapp"></li>
+                    <li><img src="/assets/Instagram.svg" alt="ícone do instagram"></li>
+                </ul>
+                <h2 class="rodape__logo"><span class="rodape__logo--negrito">Cosméticos</span>JM</h2>
+            </section>
         </div>
-      </div>
-    </section>
-</footer>
+        <section class="footer__class"></section>
+        <div class="footer-classic-aside">
+            <div class="container__classic">
+                <p class="rights"><span>&copy;&nbsp; </span><span
+                        class="copyright-year"></span><span>&nbsp;</span><span></span><span>.</span><span>
+                        Desenvolvido&nbsp;by&nbsp; Francisco Moreira</span></p>
+            </div>
+        </div>
+        </section>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <script>
+        const swiper = new Swiper('.swiper', {
+            speed: 400,
+            spaceBetween: 10,
+            slidesPerView: 2,
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets'
+            },
+        });
+    </script>
 
 </body>
 
