Adicionando mouseenter e mouseout nos cards

--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
         </div>
     </section>
     <section class="cartao__destaque">
-        <div class="cartao__1">
+        <div id="cartao__1" class="cartao__1"  >
             <img class="imagem__cartao" src="assets/makeup.svg" alt="Maquiagem">
             <h2 class="titulo__cartao">Beleza</h2>
             <p class="texto__cartao">
                 Novos processos de limpeza, hidratação, tratamento e proteção solar são criados também para o corpo e cabelos.
             </p>
         </div>
-        <div class="cartao__1">
+        <div id="cartao__2" class="cartao__1" >
             <img class="imagem__cartao" src="assets/mascara.svg" alt="Mascara para cilios">
             <h2 class="titulo__cartao">Conforto</h2>
             <p class="texto__cartao">
                 Muitos dos ativos tradicionais do skincare facial estão sendo incorporados em formulações para os cabelos e o corpo.
             </p>
         </div>
-        <div class="cartao__1">
+        <div id="cartao__3" class="cartao__1"  >
             <img class="imagem__cartao" src="assets/spray.svg" alt="Spray">
             <h2 class="titulo__cartao">Desempenho</h2>
             <p class="texto__cartao">
@@ -205,8 +205,7 @@
             },
         });
     </script>
-
-
+   <script src="Js/script.js" type="module"></script>
 </body>
         
 </html>
