Continuação do bug do JS

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             },
         });
     </script>
-   <script src="Js/script.js" type="module"></script>
+   <script src="Js/mouse.js" type="module"></script>
 </body>
         
 </html>
