Fiz mudanças na pagina de depoimentos para melhor visualização dos depoimentos colocar em cards.

--- a/Depoimentos.html
+++ b/Depoimentos.html
@@ -66,42 +66,41 @@
             </ul>
         </ul>
     </header>
-    <main class="corpo__sobre">
-        <h2 class="corpo__titulo">Depoimentos</h2>
-        <section class="corpo__sobre1">
+</section>
+<h2 class="corpo__titulo">Depoimentos</h2>
 
-            <div class="sobre">
-                <img class="imagem__pessoa" src="/assets/homem1.jpg" alt="Foto de um homem">
-                <H2 class="sobre__titulo">Carlos</H2>
-                <p class="sobre__descricao">Comprei um perfume na Loja Cosméticos JM e simplesmente adorei! A fragrância
-                    é
-                    duradoura e sofisticada. Recomendo a todos os meus amigos.</p>
-            </div>
-            <div class="sobre">
-                <img class="imagem__pessoa" src="/assets/mulher1.jpg" alt="Foto de uma mulher">
-                <h1 class="sobre__titulo"> Maria</h1>
-                <p class="sobre__descricao">Estou apaixonada pelos produtos da Loja Cosméticos JM! O creme facial que
-                    comprei
-                    deixou minha pele mais suave e radiante. Além disso, o atendimento foi incrível, e a entrega foi
-                    super
-                    rápida.</p>
-            </div>
-            <div class="sobre">
-                <img class="imagem__pessoa" src="/assets/homem2.jpg" alt="Foto de um homem">
-                <H2 class="sobre__titulo">Rafael</H2>
-                <p class="sobre__descricao">Os batons da Loja Cosméticos JM são maravilhosos! As cores são vibrantes, e
-                    a
-                    textura é perfeita. Sem dúvida, minha loja favorita para produtos de beleza.</p>
-            </div>
-            <div class="sobre">
-                <img class="imagem__pessoa" src="/assets/mulher2.jpg" alt="Foto de uma mulher">
-                <H2 class="sobre__titulo">Joelma</H2>
-                <p class="sobre__descricao">Precisava de um novo shampoo e encontrei na Loja Cosméticos JM. Meu cabelo
-                    está mais
-                    macio e brilhante desde que comecei a usá-lo. Excelente qualidade!</p>
-            </div>
-        </section>
-    </main>
+<section class="cartao__destaque1">
+    <div id="cartao__1" class="cartao__11"  >
+        <img class="imagem__cartao1" src="assets/homem1.jpg" alt="Maquiagem">
+        <h2 class="titulo__cartao1">Carlos</h2>
+        <p class="texto__cartao1">
+            Comprei um perfume na Loja Cosméticos JM e simplesmente adorei! A fragrância é duradoura e sofisticada. Recomendo a todos os meus amigos.
+        </p>
+    </div>
+    <div id="cartao__2" class="cartao__11" >
+        <img class="imagem__cartao1" src="assets/mulher1.jpg" alt="Mascara para cilios">
+        <h2 class="titulo__cartao1"> Maria</h2>
+        <p class="texto__cartao1">
+            Estou apaixonada pelos produtos da Loja Cosméticos JM! O creme facial que comprei deixou minha pele mais suave e radiante. Além disso, o atendimento foi incrível, e a entrega foi super rápida.
+        </p>
+    </div>
+    <div id="cartao__3" class="cartao__11"  >
+        <img class="imagem__cartao1" src="assets/homem2.jpg" alt="Spray">
+        <h2 class="titulo__cartao1">Rafael</h2>
+        <p class="texto__cartao1">
+            Os batons da Loja Cosméticos JM são maravilhosos! As cores são vibrantes, e a textura é perfeita. Sem dúvida, minha loja favorita para produtos de beleza.
+        </p>
+    </div>
+    <div id="cartao__4" class="cartao__11"  >
+        <img class="imagem__cartao1" src="assets/mulher2.jpg" alt="Spray">
+        <h2 class="titulo__cartao1">Joelma</h2>
+        <p class="texto__cartao1">
+            Precisava de um novo shampoo e encontrei na Loja Cosméticos JM. Meu cabelo está mais macio e brilhante desde que comecei a usá-lo. Excelente qualidade!
+        </p>
+    </div>
+ 
+</section>
+    
     <section class="carrossel">
 
         <div class="carrossel__container1">
