Atualização da pagina de depoimentos

--- a/Depoimentos.html
+++ b/Depoimentos.html
@@ -81,7 +81,7 @@
         <img class="imagem__cartao1" src="assets/mulher1.jpg" alt="Mascara para cilios">
         <h2 class="titulo__cartao1"> Maria</h2>
         <p class="texto__cartao1">
-            Estou apaixonada pelos produtos da Loja Cosméticos JM! O creme facial que comprei deixou minha pele mais suave e radiante. Além disso, o atendimento foi incrível, e a entrega foi super rápida.
+            Estou apaixonada pelos produtos da Loja Cosméticos JM! O creme facial que comprei deixou minha pele mais suave e radiante. Além disso, o atendimento foi incrível.
         </p>
     </div>
     <div id="cartao__3" class="cartao__11"  >
