--- a/Depoimentos.html
+++ b/Depoimentos.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
     <title>Depoimentos</title>
@@ -70,28 +71,28 @@
 <h2 class="corpo__titulo">Depoimentos</h2>
 
 <section class="cartao__destaque1">
-    <div id="cartao__1" class="cartao__11"  >
+    <div id="cartao__1" class="cartao__11" data-aos="flip-left" >
         <img class="imagem__cartao1" src="assets/homem1.jpg" alt="Maquiagem">
         <h2 class="titulo__cartao1">Carlos</h2>
         <p class="texto__cartao1">
             Comprei um perfume na Loja Cosméticos JM e simplesmente adorei! A fragrância é duradoura e sofisticada. Recomendo a todos os meus amigos.
         </p>
     </div>
-    <div id="cartao__2" class="cartao__11" >
+    <div id="cartao__2" class="cartao__11" data-aos="flip-right">
         <img class="imagem__cartao1" src="assets/mulher1.jpg" alt="Mascara para cilios">
         <h2 class="titulo__cartao1"> Maria</h2>
         <p class="texto__cartao1">
             Estou apaixonada pelos produtos da Loja Cosméticos JM! O creme facial que comprei deixou minha pele mais suave e radiante. Além disso, o atendimento foi incrível.
         </p>
     </div>
-    <div id="cartao__3" class="cartao__11"  >
+    <div id="cartao__3" class="cartao__11"  data-aos="flip-left">
         <img class="imagem__cartao1" src="assets/homem2.jpg" alt="Spray">
         <h2 class="titulo__cartao1">Rafael</h2>
         <p class="texto__cartao1">
             Os batons da Loja Cosméticos JM são maravilhosos! As cores são vibrantes, e a textura é perfeita. Sem dúvida, minha loja favorita para produtos de beleza.
         </p>
     </div>
-    <div id="cartao__4" class="cartao__11"  >
+    <div id="cartao__4" class="cartao__11"  data-aos="flip-right">
         <img class="imagem__cartao1" src="assets/mulher2.jpg" alt="Spray">
         <h2 class="titulo__cartao1">Joelma</h2>
         <p class="texto__cartao1">
@@ -196,6 +197,12 @@
             },
         });
     </script>
+     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+     <script>
+         AOS.init({
+         duration: 1000,
+     });
+     </script>
 
 </body>
 
