--- a/Sobre.html
+++ b/Sobre.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="styles.css">
     
     <title>Sobre</title>
@@ -86,7 +87,7 @@
                     todas
                     nossas redes socias e por WhatsApp.</p>
                     <div class="imagem1">
-                        <img class="imagem__conteudo" src="assets/cosmetico.jpg" alt="Foto da faixada da loja Cosmenticos JM">
+                        <img class="imagem__conteudo" src="assets/cosmetico.jpg" alt="Foto da faixada da loja Cosmenticos JM" data-aos="slide-left" >
                     </div>
             </div>
             
@@ -160,6 +161,12 @@
             </div>
           </div>
         </section>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+     <script>
+         AOS.init({
+         duration: 1000,
+     });
+     </script>
     </footer>
 </body>
 
