--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
     <title>Cosmético JM</title>
@@ -83,9 +84,9 @@
     </div>
 </section>
     </section>
-        <section class="imagemeta">
-         <img class="imagemeta__imagem" src="assets/produtos.svg" alt="Produtos de comédicos">
-            <h2 class="texto2">Nada de fórmula mágica, aqui a gente trabalha com sinceridade. Nossos cosméticos são de marcas conhecidas e, utilizados de forma correta, vão te trazer bem-estar e te ajudar a chegar no seu objetivo. 
+        <section class="imagemeta" >
+         <img class="imagemeta__imagem" src="assets/produtos.svg" alt="Produtos de comédicos"  data-aos="fade-downs">
+            <h2 class="texto2" data-aos="fade-downs">Nada de fórmula mágica, aqui a gente trabalha com sinceridade. Nossos cosméticos são de marcas conhecidas e, utilizados de forma correta, vão te trazer bem-estar e te ajudar a chegar no seu objetivo. 
             <strong class="titulo-destaque">  Venha conferir a nossa linha e aproveite para ganhar algumas amostras grátis</strong>.
         </h2>
     </section>
@@ -111,21 +112,21 @@
         </div>
     </section>
     <section class="cartao__destaque">
-        <div id="cartao__1" class="cartao__1"  >
+        <div id="cartao__1" class="cartao__1"  data-aos="fade-left">
             <img class="imagem__cartao" src="assets/makeup.svg" alt="Maquiagem">
             <h2 class="titulo__cartao">Beleza</h2>
             <p class="texto__cartao">
                 Novos processos de limpeza, hidratação, tratamento e proteção solar são criados também para o corpo e cabelos.
             </p>
         </div>
-        <div id="cartao__2" class="cartao__1" >
+        <div id="cartao__2" class="cartao__1" data-aos="fade-up">
             <img class="imagem__cartao" src="assets/mascara.svg" alt="Mascara para cilios">
             <h2 class="titulo__cartao">Conforto</h2>
             <p class="texto__cartao">
                 Muitos dos ativos tradicionais do skincare facial estão sendo incorporados em formulações para os cabelos e o corpo.
             </p>
         </div>
-        <div id="cartao__3" class="cartao__1"  >
+        <div id="cartao__3" class="cartao__1" data-aos="fade-right" >
             <img class="imagem__cartao" src="assets/spray.svg" alt="Spray">
             <h2 class="titulo__cartao">Desempenho</h2>
             <p class="texto__cartao">
@@ -205,7 +206,14 @@
             },
         });
     </script>
-   <script src="Js/mouse.js" type="module"></script>
+   <script src="Js/mouse.js" type="module">
+   </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+        duration: 1500,
+    });
+    </script>
 </body>
         
 </html>
